# UniqueMoleculeHash

./: README.md  requirements.txt  setup.cfg
tests/: unique_molecule_hash_tests.py
tests/files/: attachment_point1.mol  attachment_point2.mol  field_data_txt.mol  mixture_of_isomers.mol  polymer1.mol  polymer2.mol
unique_molecule_hash/: __init__.py  unique_molecule_hash.py
