[metadata]
name = unique_molecule_hash
version = 0.1.0-alpha
author = Joos Kiener
author_email = joos.kiener@gmail.com
description = Generate a unique hash for an RDKit molecule
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kienerj/UniqueMoleculeHash
project_urls =
    Bug Tracker = https://github.com/kienerj/UniqueMoleculeHash/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.9
install_requires =    
    rdkit
	xxhash
